# swatchdog

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker-build.yml  release.yml
src/: main.rs
