[package]
name = "swatchdog"
version = "0.1.0"
authors = ["Bryan <opensource@singee.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
parse_duration = "2.1.1"
reqwest = { version = "0.11.20", default-features = false, features = ["blocking", "rustls-tls", "rustls-tls-native-roots"] }
